--- a/frontend/src/components/profile/Profile.module.css
+++ b/frontend/src/components/profile/Profile.module.css
@@ -1,57 +1,82 @@
 * {
-    margin: 0;
+  margin: 0;
 }
 
 .logo {
-    height: 20vmin;
-    pointer-events: none;
-    margin: 1em 0;
+  height: 20vmin;
+  pointer-events: none;
+  margin: 1em 0;
 }
 
 .AppMain {
-    min-height: 80vh;
-    display: flex;
-    min-width: 100%;
-    flex-direction: column;
-    /*align-items: center;*/
-    justify-content: center;
-    font-size: calc(10px + 2vmin);
-    color: #9c6644;
-    font-weight: normal;
+  min-height: 80vh;
+  display: flex;
+  min-width: 100%;
+  flex-direction: column;
+  /*align-items: center;*/
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: #9c6644;
+  font-weight: normal;
 }
 
 p {
-    margin: 0.8em;
+  margin: 0.8em;
 }
 
 h3 {
-    margin-bottom: 1em;
+  margin-bottom: 1em;
 }
 
 .MainInfo {
-    display: flex;
-    justify-content: space-around;
+  display: flex;
+  justify-content: space-around;
 }
 
 .userInfo {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background-color: #fff;
-    border-radius: 10%;
-    margin-bottom: 1em;
-    flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #fff;
+  border-radius: 10%;
+  margin-bottom: 1em;
+  flex-grow: 1;
 }
 
 .updateButton {
-    border: none;
-    color: white;
-    font-weight: bold;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-    border-radius: 5%;
-    background-color: #008CBA;
+  margin-top: 1px;
+  margin-left: 5px;
+  border: none;
+  color: white;
+  font-weight: bold;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 10%;
+  background-color: #008CBA;
+}
+
+.button {
+  background-color: #4CAF50; /* Green */
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.select {
+  padding: 1rem;
+  cursor: pointer;
+  border-radius: 5px;
+  border-color: white;
+  background-color: #ffffff;
+  list-style: none;
+  font-size: 16px;
 }
